--- a/src/pug/home/how.pug
+++ b/src/pug/home/how.pug
@@ -15,6 +15,9 @@ section#how(css-module='home.how.wrapper')
     div(css-module='home.how.infographic')
       +svg('infographic')
 
+    button(css-module='home.how.trigger')
+      +svg('flowchart', { 'css-module': 'home.how.flowchart' })
+
     div(css-module='home.how.copy')
       p Ethereum’s widespread adoption was the key to realizing our vision. Instead of GPUs being used to only mine currencies, we use their intrinsic function to render and leverage the features of the blockchain: network, incentives and trust.
 
