--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,7 +6,7 @@ block content
   include home/about
   include home/intro
   include home/problem
-  //-include home/how
+  include home/how
   //-include home/team
   //-include home/sale
   //-include home/press
