--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -7,7 +7,7 @@ block content
   include home/intro
   include home/problem
   include home/how
-  //-include home/team
+  include home/team
   //-include home/sale
   //-include home/press
   //-include home/roadmap
