--- a/src/assets/styles/main/home/team.scss
+++ b/src/assets/styles/main/home/team.scss
@@ -3,6 +3,11 @@
 .wrapper {
   padding: 115px 0 60px;
   text-align: center;
+
+  @include breakpoint(desktop) {
+    padding-top: 36px;
+    padding-bottom: 0;
+  }
 }
 
 .title {
@@ -11,6 +16,13 @@
   line-height: 23px;
   font-weight: 700;
   margin-bottom: 33px;
+
+  @include breakpoint(desktop) {
+    font-weight: 900;
+    font-size: 15px;
+    line-height: 18px;
+    margin-bottom: 18px;
+  }
 }
 
 .meet {
@@ -21,6 +33,13 @@
   margin-bottom: 70px;
   margin-left: auto;
   margin-right: auto;
+
+  @include breakpoint(desktop) {
+    max-width: 225px;
+    font-size: 23px;
+    line-height: 32px;
+    margin-bottom: 32px;
+  }
 }
 
 .subtitle {
@@ -28,4 +47,32 @@
   line-height: 45px;
   font-weight: 600;
   margin-bottom: 70px;
+}
+
+.uncool {
+  @include breakpoint(desktop) {
+    display: none;
+  }
+}
+
+.rest {
+  display: none;
+  @include breakpoint(desktop) {
+    @include reset-btn();
+    font-family: $lato;
+    font-size: 19px;
+    line-height: 23px;
+    font-weight: 700;
+    background: #E8EDF0;
+    color: $cool-gray;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    padding: 35px;
+
+  }
+  svg {
+    margin-left: 16px;
+  }
 }
