--- a/src/assets/styles/main/team/founders.scss
+++ b/src/assets/styles/main/team/founders.scss
@@ -5,12 +5,25 @@
   justify-content: center;
   flex-wrap: wrap;
   margin: 0 -50px 77px;
+
+  @include breakpoint(desktop) {
+    margin: 0;
+    display: block;
+  }
 }
 
 .vip {
   flex-basis: 420px;
   max-width: 420px;
   padding: 0 50px;
+
+  @include breakpoint(desktop) {
+    padding: 0;
+    max-width: 169px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 38px;
+  }
 
   button {
     @include reset-btn;
@@ -20,6 +33,9 @@
     display: block;
     width: 100%;
     margin-bottom: 44px;
+    @include breakpoint(desktop) {
+      margin-bottom: 15px;
+    }
   }
 
   h4 {
@@ -28,6 +44,11 @@
     line-height: 27px;
     font-weight: 700;
     margin-bottom: 17px;
+    @include breakpoint(desktop) {
+      font-size: 19px;
+      line-height: 21px;
+      margin-bottom: 8px;
+    }
   }
 
   h5 {
@@ -36,6 +57,11 @@
     line-height: 19px;
     font-weight: 900;
     margin-bottom: 8px;
+    @include breakpoint(desktop) {
+      font-size: 15px;
+      line-height: 18px;
+      margin-bottom: 4px;
+    }
   }
 
   h6 {
@@ -43,6 +69,10 @@
     font-size: 13px;
     line-height: 16px;
     font-weight: 700;
+    @include breakpoint(desktop) {
+      font-size: 11px;
+      line-height: 28px;
+    }
   }
 }
 
