tweaking the problem situation

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,7 @@ block content
   include home/problem
   include home/how
   include home/team
-  //-include home/sale
+  include home/sale
   //-include home/press
   //-include home/roadmap
   //-include home/partners
@@ -17,5 +17,5 @@ block content
   //-include home/footer
   //-include home/copyright
 
-  //-include home/team/detail
+  include home/team/detail
   include home/mobile-menu
