--- a/src/assets/styles/main/home/problem.scss
+++ b/src/assets/styles/main/home/problem.scss
@@ -112,7 +112,7 @@
   @include breakpoint(desktop) {
     padding: 0;
     max-width: 100%;
-    margin-bottom: 28px;
+    margin-bottom: 0;
   }
 }
 
