--- a/src/pug/home/sale/distribution.pug
+++ b/src/pug/home/sale/distribution.pug
@@ -1,9 +1,11 @@
-div(css-module='sale.distribution.distribution')
-  div(css-module='sale.technicals.small-col')
-    h4(css-module='sale.technicals.render') Token Distribution & Use of Funds
-  div(css-module='sale.technicals.large-col')
-    div(css-module='sale.distribution.row')
-      div(css-module='sale.distribution.hafu')
-        +svg('pie-1-full')
-      div(css-module='sale.distribution.hafu')
-        +svg('pie-2-full')
+div
+  .container-940
+    div(css-module='sale.distribution.distribution')
+      div(css-module='sale.technicals.small-col')
+        h4(css-module='sale.technicals.render') Token Distribution & Use of Funds
+      div(css-module='sale.technicals.large-col')
+        div(css-module='sale.distribution.row')
+          div(css-module='sale.distribution.hafu')
+            +svg('pie-1-full')
+          div(css-module='sale.distribution.hafu')
+            +svg('pie-2-full')
