--- a/src/pug/home/sale/technicals.pug
+++ b/src/pug/home/sale/technicals.pug
@@ -5,43 +5,45 @@ mixin table({title, copy, intro})
     div(css-module='sale.technicals.table-large')
       p(css-module= intro ? 'sale.technicals.intro' : 'sale.technicals.copy')= copy
 
-div(css-module='sale.technicals.row')
-  div(css-module='sale.technicals.small-col')
-    h6(css-module='sale.technicals.title') Token Sale
-    h4(css-module='sale.technicals.render') Render Token Technicals
-  div(css-module='sale.technicals.large-col')
-    +table({
-      title: 'What is Render Token',
-      copy: "The Render Token is an ERC20 standard token on the Ethereum blockchain. "
-        + "RNDR will be used as a form of payment between clients and renderers in the upcoming"
-        + " decentralized Render Network, and can be traded for fiat currency.",
-      intro: true
-    })
-    +table({
-      title: 'Symbol',
-      copy: 'RNDR'
-    })
-    +table({
-      title: 'Hardcap',
-      copy: '10,000,000 USD'
-    })
-    +table({
-      title: 'Token Supply',
-      copy: '40,000,000 RNDR'
-    })
-    +table({
-      title: 'Price',
-      copy: '1 RNDR = 0.25 USD'
-    })
-    +table({
-      title: 'Funding',
-      copy: 'Ethereum (ETH)'
-    })
-    +table({
-      title: 'Starts',
-      copy: 'April 14, 2018 (9:00 AM, New York, EST)'
-    })
-    +table({
-      title: 'Ends',
-      copy: 'February 28, 2018 (11:59 PM, New York, EST)'
-    })
+div
+  .container-940
+    div(css-module='sale.technicals.row')
+      div(css-module='sale.technicals.small-col')
+        h6(css-module='sale.technicals.title') Token Sale
+        h4(css-module='sale.technicals.render') Render Token Technicals
+      div(css-module='sale.technicals.large-col')
+        +table({
+          title: 'What is Render Token',
+          copy: "The Render Token is an ERC20 standard token on the Ethereum blockchain. "
+            + "RNDR will be used as a form of payment between clients and renderers in the upcoming"
+            + " decentralized Render Network, and can be traded for fiat currency.",
+          intro: true
+        })
+        +table({
+          title: 'Symbol',
+          copy: 'RNDR'
+        })
+        +table({
+          title: 'Hardcap',
+          copy: '10,000,000 USD'
+        })
+        +table({
+          title: 'Token Supply',
+          copy: '40,000,000 RNDR'
+        })
+        +table({
+          title: 'Price',
+          copy: '1 RNDR = 0.25 USD'
+        })
+        +table({
+          title: 'Funding',
+          copy: 'Ethereum (ETH)'
+        })
+        +table({
+          title: 'Starts',
+          copy: 'April 14, 2018 (9:00 AM, New York, EST)'
+        })
+        +table({
+          title: 'Ends',
+          copy: 'February 28, 2018 (11:59 PM, New York, EST)'
+        })
