--- a/src/pug/home/sale.pug
+++ b/src/pug/home/sale.pug
@@ -1,3 +1,3 @@
 section#sale(css-module='home.sale.wrapper')
   include sale/technicals
-  include sale/distribution
+  //- include sale/distribution
