--- a/src/pug/home/sale/distribution.pug
+++ b/src/pug/home/sale/distribution.pug
@@ -2,10 +2,12 @@ div
   .container-940
     div(css-module='sale.distribution.distribution')
       div(css-module='sale.technicals.small-col')
-        h4(css-module='sale.technicals.render') Token Distribution & Use of Funds
+        h4(css-module='sale.distribution.desk-title') Token Distribution & Use of Funds
       div(css-module='sale.technicals.large-col')
         div(css-module='sale.distribution.row')
           div(css-module='sale.distribution.hafu')
+            h4(css-module='sale.distribution.mobile-title') Token Distribution
             +svg('pie-1-full')
           div(css-module='sale.distribution.hafu')
+            h4(css-module='sale.distribution.mobile-title') Use of Funds
             +svg('pie-2-full')
