press situation mobilized

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -9,7 +9,7 @@ block content
   include home/how
   include home/team
   include home/sale
-  //-include home/press
+  include home/press
   //-include home/roadmap
   //-include home/partners
   //-include home/faqs
