--- a/src/assets/styles/main/home/press.scss
+++ b/src/assets/styles/main/home/press.scss
@@ -3,6 +3,9 @@
 .wrapper {
   padding: 115px 0;
   text-align: center;
+  @include breakpoint(desktop) {
+    padding: 36px 0 38px;
+  }
 }
 
 .container {
@@ -16,6 +19,12 @@
 .row {
   display: flex;
   justify-content: space-between;
+  @include breakpoint(desktop) {
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 -15px;
+    align-items: center;
+  }
 }
 
 .media {
@@ -23,6 +32,14 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    max-width: 100%;
+  }
+
+  @include breakpoint(desktop) {
+    flex-basis: percentage(1/3);
+    max-width: percentage(1/3);
+    padding: 0 15px;
+    margin-bottom: 20px;
   }
 }
 
@@ -31,6 +48,11 @@
   line-height: 45px;
   font-weight: 600;
   margin-bottom: 66px;
+  @include breakpoint(desktop) {
+    font-size: 23px;
+    line-height: 32px;
+    margin-bottom: 29px;
+  }
 }
 
 .small {
@@ -39,4 +61,11 @@
   font-size: 19px;
   line-height: 23px;
   margin-bottom: 32px;
+
+  @include breakpoint(desktop) {
+    font-weight: 900;
+    font-size: 15px;
+    line-height: 18px;
+    margin-bottom: 18px;
+  }
 }
