--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -10,7 +10,7 @@ block content
   include home/team
   include home/sale
   include home/press
-  //-include home/roadmap
+  include home/roadmap
   //-include home/partners
   //-include home/faqs
   //-include home/ctas
