--- a/src/assets/styles/main/home/roadmap.scss
+++ b/src/assets/styles/main/home/roadmap.scss
@@ -4,6 +4,10 @@
   background: $snow;
   padding-top: 115px;
   position: relative;
+  @include breakpoint(desktop) {
+    padding-top: 36px;
+    padding-bottom: 40px;
+  }
 }
 
 .title {
@@ -13,6 +17,13 @@
   font-family: $lato;
   font-weight: 700;
   text-align: center;
+
+  @include breakpoint(desktop) {
+    font-weight: 900;
+    font-size: 15px;
+    line-height: 18px;
+    margin-bottom: 18px;
+  }
 }
 
 .subtitle {
@@ -21,6 +32,11 @@
   line-height: 45px;
   font-weight: 600;
   margin-bottom: 70px;
+  @include breakpoint(desktop) {
+    font-size: 23px;
+    line-height: 32px;
+    margin-bottom: 32px;
+  }
 }
 
 .first-box {
@@ -28,15 +44,27 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 39px;
+
+  @include breakpoint(desktop) {
+    margin-bottom: 0;
+  }
 }
 
 .row {
   display: flex;
+
+  @include breakpoint(desktop) {
+    display: block;
+  }
 }
 
 .box-col {
   flex-basis: percentage(450/1060);
   max-width: percentage(450/1060);
+
+  @include breakpoint(desktop) {
+    max-width: 100%;
+  }
 }
 
 .timeline-col {
@@ -44,11 +72,19 @@
   max-width: percentage(98/1060);
   margin-left: auto;
   margin-right: auto;
+
+  @include breakpoint(desktop) {
+    display: none;
+  }
 }
 
 .gears {
   display: block;
   width: 100%;
+
+  @include breakpoint(desktop) {
+    display: none;
+  }
 }
 
 .gears-stuck {
@@ -59,8 +95,14 @@
 .two {
   margin-top: 40px;
   margin-bottom: 78px;
+  @include breakpoint(desktop) {
+    margin: 0;
+  }
 }
 
 .three {
   margin-top: 195px;
+  @include breakpoint(desktop) {
+    margin: 0;
+  }
 }
