--- a/src/pug/home/partners.pug
+++ b/src/pug/home/partners.pug
@@ -17,7 +17,7 @@ section#partners(css-module='home.partners.wrapper')
 
     div(css-module='home.partners.row')
       div(css-module='home.partners.small')
-        h4 Projects helping us make RNDR possible.
+        h4(css-module='home.partners.subtitle') Projects helping us make RNDR possible.
       div(css-module='home.partners.large')
         +partner({
           icon: 'decentraland',
