--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -11,7 +11,7 @@ block content
   include home/sale
   include home/press
   include home/roadmap
-  //-include home/partners
+  include home/partners
   //-include home/faqs
   //-include home/ctas
   //-include home/footer
