--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -12,7 +12,7 @@ block content
   include home/press
   include home/roadmap
   include home/partners
-  //-include home/faqs
+  include home/faqs
   //-include home/ctas
   //-include home/footer
   //-include home/copyright
