--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -13,7 +13,7 @@ block content
   include home/roadmap
   include home/partners
   include home/faqs
-  //-include home/ctas
+  include home/ctas
   //-include home/footer
   //-include home/copyright
 
