--- a/src/assets/styles/main/home/ctas.scss
+++ b/src/assets/styles/main/home/ctas.scss
@@ -3,7 +3,7 @@
 .wrapper {
   padding-top: 117px;
   padding-bottom: 100px;
-
+  color: $white;
   background-image: linear-gradient(
     90deg,
     $black 0%,
@@ -12,17 +12,35 @@
     $red 100%
   );
 
-  color: $white;
+  @include breakpoint(desktop) {
+    background-image: linear-gradient(
+      $black 0%,
+      $black 50%,
+      $red 50%,
+      $red 100%
+    );
+    padding: 0;
+  }
 }
 
 .row {
   display: flex;
   justify-content: space-between;
+
+  @include breakpoint(desktop) {
+    display: block;
+  }
 }
 
 .half {
   flex-basis: percentage(5/12);
   max-width: percentage(5/12);
+
+  @include breakpoint(desktop) {
+    max-width: 100%;
+    padding: 31px 0 40px;
+    text-align: center;
+  }
 }
 
 .title {
@@ -31,6 +49,16 @@
   max-width: 300px;
   font-weight: 600;
   margin-bottom: 49px;
+
+  @include breakpoint(desktop) {
+    font-size: 23px;
+    line-height: 32px;
+    margin-bottom: 22px;
+    max-width: 205px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
 }
 
 .chat {
@@ -47,11 +75,25 @@
   svg {
     margin-right: 10px;
   }
+
+  @include breakpoint(desktop) {
+    font-size: 13px;
+    font-weight: 900;
+    line-height: 16px;
+    padding: 17px 20px;
+    height: 50px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .input {
   position: relative;
   padding-right: 21px;
+
+  @include breakpoint(desktop) {
+    padding-right: 19px;
+  }
 
   input {
     @include reset-input;
@@ -65,6 +107,13 @@
     font-size: 18px;
     line-height: 23px;
     color: $black;
+
+    @include breakpoint(desktop) {
+      height: 50px;
+      font-size: 15px;
+      line-height: 19px;
+      padding: 15px 18px;
+    }
   }
 
   button[type='submit'] {
@@ -74,6 +123,10 @@
     background: $red;
     border-radius: 50%;
     right: 0;
+
+    @include breakpoint(desktop) {
+      @include size(38px);
+    }
 
     svg {
       @include align;
