footer mobilized esketit

--- a/src/pug/home/footer.pug
+++ b/src/pug/home/footer.pug
@@ -36,7 +36,7 @@ footer#footer(css-module='home.footer.wrapper')
           +svg('dash')
 
         ul(css-module='home.footer.links')
-          li: a(href='#')
+          li(css-module='home.footer.desk'): a(href='#')
             span Watch Intro Video
             +svg('play-mini')
           li: a(href='#') About OTOY
