--- a/src/assets/styles/main/home/footer.scss
+++ b/src/assets/styles/main/home/footer.scss
@@ -4,21 +4,38 @@
   padding: 95px 0;
   color: $cool-gray;
   margin-top: auto;
+
+  @include breakpoint(desktop) {
+    padding: 36px 0 5px;
+    border-bottom: 1px solid rgba($black, 0.05);
+  }
 }
 
 .row {
   display: flex;
   justify-content: space-between;
+
+  @include breakpoint(desktop) {
+    display: block;
+  }
 }
 
 .large {
   flex-basis: percentage(3/12);
   max-width: percentage(3/12);
+
+  @include breakpoint(desktop) {
+    display: none;
+  }
 }
 
 .small {
   flex-basis: percentage(2/12);
   max-width: percentage(2/12);
+  @include breakpoint(desktop) {
+    max-width: 100%;
+    margin-bottom: 29px;
+  }
 }
 
 .logo {
@@ -44,6 +61,9 @@
 
 .dash {
   margin-bottom: 33px;
+  @include breakpoint(desktop) {
+    margin-bottom: 24px;
+  }
   svg {
     display: block;
     fill: currentColor;
@@ -56,8 +76,18 @@
   line-height: 24px;
   font-weight: 600;
 
+  @include breakpoint(desktop) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
   li {
     margin-bottom: 10px;
+
+    @include breakpoint(desktop) {
+      flex-basis: 50%;
+      max-width: 50%;
+    }
   }
 
   a {
@@ -80,8 +110,18 @@
   line-height: 24px;
   font-weight: 600;
 
+  @include breakpoint(desktop) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
   li {
     margin-bottom: 10px;
+
+    @include breakpoint(desktop) {
+      flex-basis: 50%;
+      max-width: 50%;
+    }
   }
 
   a {
@@ -91,5 +131,11 @@
 
   svg {
     margin: 0 5px;
+  }
+}
+
+.desk {
+  @include breakpoint(desktop) {
+    display: none;
   }
 }
