--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -14,7 +14,7 @@ block content
   include home/partners
   include home/faqs
   include home/ctas
-  //-include home/footer
+  include home/footer
   //-include home/copyright
 
   include home/team/detail
