--- a/src/pug/home/copyright.pug
+++ b/src/pug/home/copyright.pug
@@ -5,7 +5,7 @@
     div(css-module='home.copyright.row')
       div
         span 2018 © OTOY Inc.
-      div
+      div(css-module='home.copyright.logo')
         +svg('footer-logo')
       div(css-module='home.copyright.right')
         span Made in USA
