--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -15,7 +15,7 @@ block content
   include home/faqs
   include home/ctas
   include home/footer
-  //-include home/copyright
+  include home/copyright
 
   include home/team/detail
   include home/mobile-menu
