--- a/src/assets/styles/main/team/detail.scss
+++ b/src/assets/styles/main/team/detail.scss
@@ -8,6 +8,8 @@
   position: fixed;
   top: 0;
   left: 0;
+  bottom: 0;
+  right: 0;
   width: 100%;
   min-height: 100vh;
   z-index: 11;
@@ -18,6 +20,7 @@
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
+  overflow-y: auto;
 }
 
 .active {
@@ -101,9 +104,6 @@
   margin-top: 28px;
   font-size: 15px;
   line-height: 28px;
-  max-height: 400px;
-  overflow-y: auto;
-  @include invisible-scroll();
 
   p + p {
     margin-top: 28px;
