tweaking the team JS

--- a/src/pug/home/team/core.pug
+++ b/src/pug/home/team/core.pug
@@ -1,5 +1,5 @@
 mixin core({img, name, title})
-  div(css-module='team.core.core' data-team)
+  div(css-module='team.core.core')
     if img
       +img(img)
     else
