--- a/src/pug/home/team/detail.pug
+++ b/src/pug/home/team/detail.pug
@@ -1,4 +1,4 @@
-aside(css-module='team.detail.wrapper team.detail.active')
+aside(css-module='team.detail.wrapper team.detail.active' data-id='1')
   button(css-module='team.detail.exit')
     +svg('cross')
     span or press esc
@@ -18,7 +18,7 @@ aside(css-module='team.detail.wrapper team.detail.active')
         p Prior to OTOY, Alissa started a venture fund with technology writer, George Gilder, which invested in startup and mid-stage technology companies. Alissa graduated Magna Cum Laude from Georgetown University.
 
     div(css-module='team.detail.footer')
-      button(css-module='team.detail.prev')
+      button(css-module='team.detail.prev' data-id='0')
         h4 Jules Urbach
         div
           +svg('arrow-left')
@@ -27,7 +27,7 @@ aside(css-module='team.detail.wrapper team.detail.active')
       button(css-module='team.detail.foot-close')
         +svg('cross')
 
-      button(css-module='team.detail.next')
+      button(css-module='team.detail.next' data-id='2')
         h4 Ari Emmanuel
         div
           h6 Advisor
