making our own little react thing

--- a/src/assets/styles/main/team/detail.scss
+++ b/src/assets/styles/main/team/detail.scss
@@ -72,6 +72,11 @@
     object-fit: cover;
     border-radius: 5px;
   }
+
+  svg {
+    display: block;
+    @include size(100%);
+  }
 }
 
 .name {
