--- a/src/pug/home/team/detail.pug
+++ b/src/pug/home/team/detail.pug
@@ -1,4 +1,4 @@
-aside(css-module='team.detail.wrapper team.detail.active' data-id='1')
+aside(css-module='team.detail.wrapper team.detail.active')
   button(css-module='team.detail.exit')
     +svg('cross')
     span or press esc
