team micro react thing done

--- a/src/pug/home/team/detail.pug
+++ b/src/pug/home/team/detail.pug
@@ -1,4 +1,4 @@
-aside(css-module='team.detail.wrapper team.detail.active')
+aside(css-module='team.detail.wrapper')
   button(css-module='team.detail.exit')
     +svg('cross')
     span or press esc
