--- a/src/assets/styles/main/abstracts/_colors.scss
+++ b/src/assets/styles/main/abstracts/_colors.scss
@@ -8,5 +8,6 @@ $cool-gray:   #8493A8;
 $faqs-gray:   #7B889A;
 $green:       #3ECE6F;
 $blue:        #226BE6;
+$yellow:      #F8B876;
 $onyx:        rgba(12,16,21,0.60);
 $light-gray:  rgba(115,133,159,0.16);
