--- a/src/pug/faqs.pug
+++ b/src/pug/faqs.pug
@@ -11,3 +11,5 @@ block content
     include faqs/value
     include faqs/token
     include faqs/post
+  include home/footer
+  include home/copyright
