--- a/src/pug/home/team/detail.pug
+++ b/src/pug/home/team/detail.pug
@@ -1,4 +1,5 @@
 aside(css-module='team.detail.wrapper')
+  span(css-module='team.detail.top-title') Team
   button(css-module='team.detail.exit')
     +svg('cross')
     span or press esc
