same menu for faqs page

--- a/src/pug/faqs/menu.pug
+++ b/src/pug/faqs/menu.pug
@@ -12,12 +12,11 @@ header
           span.sr-only Toggle menu
 
         ul(css-module='faqs.menu.links')
-          li: a(href="#") About
-          li: a(href="#") Problems
-          li: a(href="#") Roadmap
-          li: a(href="#") Team & Advisors
-          li: a(href="#") Media Press
-          li: a(href="#") Docs
+          li: a(href="index#about") About
+          li: a(href='index#intro') Render Token
+          li: a(href='index#problem') The Problem
+          li: a(href='index#team') Team & Advisors
+          li: a(href='index#roadmap') Roadmap
 
         a(href="index" title="Back to landing page" css-module="home.menu.cta")
           span Back to landing page
