--- a/src/pug/home/intro.pug
+++ b/src/pug/home/intro.pug
@@ -14,9 +14,9 @@ section#intro(css-module='home.intro.wrapper')
             +img('poster.jpg')
             +svg('play')
         p(css-module='home.intro.mobile-intro') This Render token system creates a much more efficient, powerful, and widely-scalable rendering network.
-        button(css-module='home.intro.read-more')
-          span Read more
-          +svg('caret-down')
+        //- button(css-module='home.intro.read-more')
+          //- span Read more
+          //- +svg('caret-down')
     div(css-module='home.intro.row')
       div(css-module='home.intro.small-col')
         +img('gpu.png', 'home.intro.gpu')
