--- a/src/pug/home/menu.pug
+++ b/src/pug/home/menu.pug
@@ -12,12 +12,11 @@ header(css-module="home.menu.header")
         })
         span.sr-only Toggle menu
       ul(css-module='home.menu.normal-links')
-        li: a(href="#") About
-        li: a(href="#") Render Token
-        li: a(href="#") The Problem
-        li: a(href="#") Team & Advisors
-        li: a(href="#") Token Sale
-        li: a(href="#") Roadmap
+        li: a(href="#about") About
+        li: a(href='#intro') Render Token
+        li: a(href='#problem') The Problem
+        li: a(href='#team') Team & Advisors
+        li: a(href='#roadmap') Roadmap
 
       ul(css-module='home.menu.social')
         li: a(href="#"): +svg('twitter')
