matching mobile menu links

--- a/src/pug/home/mobile-menu.pug
+++ b/src/pug/home/mobile-menu.pug
@@ -7,13 +7,12 @@ nav(css-module='faqs.mobile-menu.wrapper')
           +svg('close')
 
       ul(css-module='faqs.mobile-menu.links')
-        li: a(href="#") About
-        li: a(href="#") Render Token
-        li: a(href="#") The Problem
-        li: a(href="#") Team & Advisors
-        li: a(href="#") Roadmap
-        li: a(href="#") Media Press
-        li: a(href="#") FAQ
+        li: a(href="#about") About
+        li: a(href='#intro') Render Token
+        li: a(href='#problem') The Problem
+        li: a(href='#team') Team & Advisors
+        li: a(href='#roadmap') Roadmap
+        li: a(href="faqs") FAQ
 
       ul(css-module='faqs.mobile-menu.social')
         li: a(href="#"): +svg('rocket')
