adding menu sources

--- a/src/pug/home/footer.pug
+++ b/src/pug/home/footer.pug
@@ -15,19 +15,19 @@ footer#footer(css-module='home.footer.wrapper')
           li: a(href="#")
             div: +svg('rocket-foot')
             span Rocket.Chat
-          li: a(href="#")
+          li: a(href="https://twitter.com/rendertoken")
             div: +svg('twitter')
             span Twitter
-          li: a(href="#")
+          li: a(href="https://www.facebook.com/OTOY")
             div: +svg('facebook')
             span Facebook
-          li: a(href="#")
+          li: a(href="https://www.t.me/rendertoken")
             div: +svg('telegram')
             span Telegram
-          li: a(href="#")
+          li: a(href="https://www.reddit.com/r/RenderToken/")
             div: +svg('reddit')
             span Reddit
-          li: a(href="#")
+          li: a(href="https://medium.com/render-token")
             div: +svg('medium')
             span Medium
       div(css-module='home.footer.small')
@@ -39,19 +39,18 @@ footer#footer(css-module='home.footer.wrapper')
           li(css-module='home.footer.desk'): a(href='#')
             span Watch Intro Video
             +svg('play-mini')
-          li: a(href='#') About OTOY
-          li: a(href='#') Render Token
-          li: a(href='#') The Problem
-          li: a(href='#') Team & Advisors
-          li: a(href='#') Roadmap
-          li: a(href='#') Media Press
+          li: a(href="index#about") About
+          li: a(href='index#intro') Render Token
+          li: a(href='index#problem') The Problem
+          li: a(href='index#team') Team & Advisors
+          li: a(href='index#roadmap') Roadmap
 
       div(css-module='home.footer.small')
         h6(css-module='home.footer.title') Whitepaper
         div(css-module='home.footer.dash')
           +svg('dash')
         ul(css-module='home.footer.links')
-          li: a(href="#") English
-          li: a(href="#") 简体中文
-          li: a(href="#") 한국어
-          li: a(href="#") Русский
+          li: a(href="https://rendertoken.com/pdf/1.7RenderTokenWhitepaper.pdf") English
+          li: a(href="https://rendertoken.com/pdf/1.2.1RenderTokenWhitepaper_Chinese.pdf") 简体中文
+          li: a(href="https://rendertoken.com/pdf/1.2.1RenderTokenWhitepaper_Korean.pdf") 한국어
+          li: a(href="https://rendertoken.com/pdf/1.2.1RenderTokenWhitepaper_Russian.pdf") Русский
