--- a/src/pug/home/hero.pug
+++ b/src/pug/home/hero.pug
@@ -13,11 +13,11 @@ section#hero(css-module="home.hero.wrapper")
 
       div(css-module="home.hero.small")
         ul(css-module="home.hero.menu")
-          li: a(href="#") Whitepaper
-          li: a(href="#") English
-          li: a(href="#") 简体中文
-          li: a(href="#") 한국어
-          li: a(href="#") Русский
+          li: a(href="https://rendertoken.com/pdf/1.7RenderTokenWhitepaper.pdf") Whitepaper
+          li: a(href="https://rendertoken.com/pdf/1.7RenderTokenWhitepaper.pdf") English
+          li: a(href="https://rendertoken.com/pdf/1.2.1RenderTokenWhitepaper_Chinese.pdf") 简体中文
+          li: a(href="https://rendertoken.com/pdf/1.2.1RenderTokenWhitepaper_Korean.pdf") 한국어
+          li: a(href="https://rendertoken.com/pdf/1.2.1RenderTokenWhitepaper_Russian.pdf") Русский
 
         include newsletter
         include project-status
